--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
+GOOGLE_API_KEY="AIzaSyCq9p0_7T7nAwLrdua7EtO_QJMN9rqrEpA"
 GROQ_API_KEY="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"
 MONGODB_URI="mongodb+srv://deeptaran2004bti_db_user:wpUtAzYeIlM6KhJw@cluster0.7wbpbah.mongodb.net/"
+MONGODB_COLLECTION="dgms_reports"
+MONGODB_DB="mine_safety"
+ANALYSIS_CLUSTERING=hdbscan
+REPORT_LIMIT=40
+HDBSCAN_MIN_CLUSTER_SIZE=5
