--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ langchain-groq>=0.1.0
 pypdf>=4.2.0
 pymongo>=4.9.0
 python-dateutil>=2.9.0
+numpy>=1.26
+scipy>=1.11
+scikit-learn>=1.4.0
+sentence-transformers>=2.2.2
+hdbscan>=0.8.33
