--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ MONGODB_DB="mine_safety"
 ANALYSIS_CLUSTERING=hdbscan
 REPORT_LIMIT=40
 HDBSCAN_MIN_CLUSTER_SIZE=5
+TAVILY_API_KEY="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"
+WEATHER_API_KEY="52928d8e0cd04c49adb173651253110"
