chat bot turned into agent and analysis enhanced

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ REPORT_LIMIT=40
 HDBSCAN_MIN_CLUSTER_SIZE=5
 TAVILY_API_KEY="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"
 WEATHER_API_KEY="52928d8e0cd04c49adb173651253110"
-GOOGLE_API_KEY=AIzaSyAmdEUg9CQoZp14VNlQ9eDmR8wC3Q3hYKA
+GOOGLE_API_KEY="AIzaSyAmdEUg9CQoZp14VNlQ9eDmR8wC3Q3hYKA"
 MONGO_CONNECTION_STRING="mongodb+srv://deeptaran2004bti_db_user:HCifsdZ6SSC7RfEB@cluster0.3mz8fbb.mongodb.net/"
 
 
